--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/rohangarg29'"
           />
         </div>
       </div>
@@ -201,7 +201,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Microprocessors</h3>
+                  <h3>Microprocessors,Microcontrollers</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -255,13 +255,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/rohangarg29/librarymangesys'"
               >
                 Github
             </button>
             <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/rohangarg29/librarymangesys'"
               >
               Live Demo
               </button>
