--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         </div>
         <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Assessment Report.pdf')"
+            onclick="window.open('./assets/vlsiportfoliopostlab.pdf')"
           >
-            Aicte parakh sla
+            Vlsi postlab
         </div>
         <div id="socials-container">
           <img
