--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/vlsiportfoliopostlab.pdf')"
+            onclick="window.open('./assets/vlsiportfoliopostlab (1).pdf')"
           >
             Vlsi postlab
         </div>
