--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         </div>
         <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/vlsiportfoliopostlab (1).pdf')"
+            onclick="window.open('./assets/Assessment Report.pdf')"
           >
-            Vlsi postlab
+            aicte parakh sla
         </div>
         <div id="socials-container">
           <img
